tests/snapshots/examples_fixtures/Modules__ListUtils.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/ListUtils.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `Modules.ListUtils` doesn't match file path `//?/examples/Modules/ListUtils.flx`.

  examples/Modules/ListUtils.flx:4:1
  |
4 | module Modules.ListUtils {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
